Added jwt auth and docs for api
